--- a/SGE/Views/Home/Index.cshtml
+++ b/SGE/Views/Home/Index.cshtml
@@ -8,39 +8,39 @@
 }
 
 <div>
-    <div class="row my-5">
-        <div style="width:34%;">
-            <img src="https://placehold.co/400x500" style="width:100%; max-width:400px;" />
-        </div>
-        <div style="width:66%;">
-            <div class="blocoTransparente py-4 px-5 mb-5" style="width:100%;">
-                <h1 style="font-size:3rem">SGE - AppEscola</h1>
-                <p style="font-size:1.5rem">Banco de dados desenvolvido para gestão escolar. É uma ferramenta indispensável para otimizar a gestão escolar e melhorar a eficiência em todos os níveis de ensino.</p>
-            </div>
-            <div class="d-flex row ">
-                <div class="" style="width: 50%;">
-                    <p style="font-size:1.5rem; color: #fff; border-top: solid 5px #f6d524;">Gerenciar eficientemente suas operações diárias, incluindo alunos, professores e funcionários</p>
-                </div>
-                <div class="" style="width: 50%;">
-                    <p style="font-size:1.5rem; color: #fff; border-top: solid 5px #f6d524;">Controlar reservas de salas, boletim de ocorrências, notas e calendários.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    
+	<div class="row my-5">
+		<div style="width:34%;">
+			<img src="https://placehold.co/400x500" style="width:100%; max-width:400px;" />
+		</div>
+		<div style="width:66%;">
+			<div class="tabela11 py-4 px-5 mb-5" style="width:100%;">
+				<h1 style="font-size:3rem">SGE - AppEscola</h1>
+				<p style="font-size:1.5rem">Banco de dados desenvolvido para gestão escolar. É uma ferramenta indispensável para otimizar a gestão escolar e melhorar a eficiência em todos os níveis de ensino.</p>
+			</div>
+			<div class="d-flex row ">
+				<div class="" style="width: 50%;">
+					<p style="font-size:1.5rem; color: #fff; border-top: solid 5px #f6d524;">Gerenciar eficientemente suas operações diárias, incluindo alunos, professores e funcionários</p>
+				</div>
+				<div class="" style="width: 50%;">
+					<p style="font-size:1.5rem; color: #fff; border-top: solid 5px #f6d524;">Controlar reservas de salas, boletim de ocorrências, notas e calendários.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <div class="row d-flex justify-content-between m-0" style="width:100%;">
-        <button class="col-4 btn botaoBranco pt-4" style="width:32%; height:150px;">
-            <svg bootstrap-icon="PlusSquare" width="50" height="50" aria-label="Pesquisar"></svg>
-            <p style="font-size:24px;"> Cadastrar Aluno </p>
-        </button>
-        <button class="col-4 btn botaoBranco pt-4" style="width:32%; height:150px;">
-            <svg bootstrap-icon="ArrowRightSquare" width="50" height="50" aria-label="Pesquisar"></svg>
-            <p style="font-size:24px;"> Reservar Sala </p>
-        </button>
-        <button class="col-4 btn botaoBranco pt-4" style="width:32%; height:150px;">
-            <svg bootstrap-icon="PencilSquare" width="50" height="50" aria-label="Pesquisar"></svg>
-            <p style="font-size:24px;"> Nova ocorrência </p>
-        </button>
-    </div>
+
+	<div class="row d-flex justify-content-between m-0" style="width:100%;">
+		<button class="col-4 btn botaoBranco pt-4" style="width:32%; height:150px;">
+			<svg bootstrap-icon="PlusSquare" width="50" height="50" aria-label="Pesquisar"></svg>
+			<p style="font-size:24px;"> Cadastrar Aluno </p>
+		</button>
+		<button class="col-4 btn botaoBranco pt-4" style="width:32%; height:150px;">
+			<svg bootstrap-icon="ArrowRightSquare" width="50" height="50" aria-label="Pesquisar"></svg>
+			<p style="font-size:24px;"> Reservar Sala </p>
+		</button>
+		<button class="col-4 btn botaoBranco pt-4" style="width:32%; height:150px;">
+			<svg bootstrap-icon="PencilSquare" width="50" height="50" aria-label="Pesquisar"></svg>
+			<p style="font-size:24px;"> Nova ocorrência </p>
+		</button>
+	</div>
 </div>
