--- a/SGE/Views/Alunos/Create.cshtml
+++ b/SGE/Views/Alunos/Create.cshtml
@@ -32,107 +32,98 @@
 }
 
 <div class="">
-    <form asp-action="Create" method="post" enctype="multipart/form-data" class="d-flex flex-row row justify-content-between align-items-end" style="width:100%;">
+    <form asp-action="Create" method="post" enctype="multipart/form-data" class="d-flex flex-row">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <div class="col-3 my-2">
-            <input asp-for="Matricula" class="form-control" placeholder="Matrícula" />
-            <span asp-validation-for="Matricula" class="text-danger"></span>
+        <div class="justify-content-between align-items-center" style="width:25%;">
+            <div class="col-9 my-2">
+                <label asp-for="UrlFoto" class="textoBrancoForm"></label>
+                <input asp-for="UrlFoto" type="file" class="headerTabela textoHeaderTabela" name="UrlFoto" />
+                <span asp-validation-for="UrlFoto" class="text-danger"></span>
+            </div>
         </div>
 
-        <div class="col-5 my-2">
-            <input asp-for="AlunoNome" class="form-control" placeholder="Nome do Aluno" />
-            <span asp-validation-for="AlunoNome" class="text-danger"></span>
-        </div>
+        <div class="d-flex flex-row row justify-content-between align-items-center" style="width:75%;">
+            <div class="col-3 my-2">
+                <input asp-for="Matricula" class="headerTabela textoHeaderTabela" placeholder="Matrícula" />
+                <span asp-validation-for="Matricula" class="text-danger"></span>
+            </div>
 
-        <div class="col-4 my-2">
-            <input asp-for="DataNascimento" type="date" class="form-control" />
-            <span asp-validation-for="DataNascimento" class="text-danger"></span>
-        </div>
+            <div class="col-5 my-2">
+                <input asp-for="AlunoNome" class="headerTabela textoHeaderTabela" placeholder="Nome do Aluno" />
+                <span asp-validation-for="AlunoNome" class="text-danger"></span>
+            </div>
 
-        <div class="col-4 my-2">
-            <input asp-for="Email" class="form-control" placeholder="Email do Aluno" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
+            <div class="col-4 my-2">
+                <input asp-for="DataNascimento" type="date" class="headerTabela textoHeaderTabela textoBrancoForm" />
+                <span asp-validation-for="DataNascimento" class="text-danger"></span>
+            </div>
 
-        <div class="col-3 my-2">
-            <input asp-for="Celular" class="form-control" placeholder="Celular do Aluno" />
-            <span asp-validation-for="Celular" class="text-danger"></span>
-        </div>
+            <div class="col-4 my-2">
+                <input asp-for="Email" class="headerTabela textoHeaderTabela" placeholder="Email do Aluno" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
 
-        <div class="col-4 my-2">
-            <input asp-for="Logradouro" class="form-control" placeholder="Logradouro" />
-            <span asp-validation-for="Logradouro" class="text-danger"></span>
-        </div>
+            <div class="col-3 my-2">
+                <input asp-for="Celular" class="headerTabela textoHeaderTabela" placeholder="Celular do Aluno" />
+                <span asp-validation-for="Celular" class="text-danger"></span>
+            </div>
 
-        <div class="col-2 my-2">
-            <input asp-for="Numero" class="form-control" placeholder="Número" />
-            <span asp-validation-for="Numero" class="text-danger"></span>
-        </div>
+            <div class="col-4 my-2">
+                <input asp-for="Logradouro" class="headerTabela textoHeaderTabela" placeholder="Logradouro" />
+                <span asp-validation-for="Logradouro" class="text-danger"></span>
+            </div>
 
-        <div class="col-3 my-2">
-            <input asp-for="Cidade" class="form-control" placeholder="Cidade" />
-            <span asp-validation-for="Cidade" class="text-danger"></span>
-        </div>
+            <div class="col-2 my-2">
+                <input asp-for="Numero" class="headerTabela textoHeaderTabela" placeholder="Número" />
+                <span asp-validation-for="Numero" class="text-danger"></span>
+            </div>
 
-        <div class="col-3 my-2">
-            <input asp-for="Estado" class="form-control" placeholder="Estado" />
-            <span asp-validation-for="Estado" class="text-danger"></span>
-        </div>
+            <div class="col-3 my-2">
+                <input asp-for="Cidade" class="headerTabela textoHeaderTabela" placeholder="Cidade" />
+                <span asp-validation-for="Cidade" class="text-danger"></span>
+            </div>
 
-        <div class="col-3 my-2">
-            <input asp-for="CEP" class="form-control" placeholder="CPF" />
-            <span asp-validation-for="CEP" class="text-danger"></span>
-        </div>
+            <div class="col-3 my-2">
+                <input asp-for="Estado" class="headerTabela textoHeaderTabela" placeholder="Estado" />
+                <span asp-validation-for="Estado" class="text-danger"></span>
+            </div>
 
-        <div class="col-4 my-2">
-            <label asp-for="Senha" class="control-label"></label>
-            <input asp-for="Senha" type="password" class="form-control" />
-            <span asp-validation-for="Senha" class="text-danger"></span>
-        </div>
+            <div class="col-3 my-2">
+                <input asp-for="CEP" class="headerTabela textoHeaderTabela" placeholder="CPF" />
+                <span asp-validation-for="CEP" class="text-danger"></span>
+            </div>
 
-        <div class="col-4 my-2">
-            <label for="ConfirmeSenha" class="control-label">Confirme a Senha</label>
-            <input id="ConfirmeSenha" type="password" name="ConfirmeSenha" class="form-control" />
-        </div>
+            <div class="col-4 my-2">
+                <input asp-for="Senha" type="password" class="headerTabela textoHeaderTabela" />
+                <span asp-validation-for="Senha" class="text-danger"></span>
+            </div>
 
-        <div class="col-4 my-2">
-            <label asp-for="DataNascimento" class="control-label"></label>
-            <input asp-for="DataNascimento" type="date" class="form-control" />
-            <span asp-validation-for="DataNascimento" class="text-danger"></span>
-        </div>
+            <div class="col-4 my-2">
+                <input id="ConfirmeSenha" type="password" name="ConfirmeSenha" class="headerTabela textoHeaderTabela" />
+            </div>
 
-        <div class="form-group form-check">
-            <input class="form-check-input" type="hidden" asp-for="CadAtivo" value="true" />
-        </div>
+            <div class="col-3 my-2">
+                <input type="submit" value="Cadastrar" class="btn botaoBranco2" style="width:100%;" />
+            </div>
+            <div>
+                <input class="form-check-input" type="hidden" asp-for="CadAtivo" value="true" />
+            </div>
 
-        <div class="form-group">
-            <input asp-for="DataCadastro" class="form-control" type="hidden"
-                   value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")" />
-        </div>
+            <div>
+                <input asp-for="DataCadastro" class="form-control" type="hidden"
+                       value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")" />
+            </div>
 
-        <div class="form-group">
-            <input asp-for="CadInativo" class="form-control" type="hidden" />
-        </div>
+            <div>
+                <input asp-for="CadInativo" class="form-control" type="hidden" />
+            </div>
 
-        <div class="form-group">
-            <input asp-for="TipoUsuarioId" type="hidden" value="@TipoUser" />
-        </div>
-
-        <div class="col-9">
-            <label asp-for="UrlFoto" class="control-label"></label>
-            <input asp-for="UrlFoto" type="file" class="form-control" name="UrlFoto" />
-            <span asp-validation-for="UrlFoto" class="text-danger"></span>
-        </div>
-
-        <div class="col-3">
-            <input type="submit" value="Cadastrar" class="btn botaoBranco2" style="width:100%;" />
+            <div>
+                <input asp-for="TipoUsuarioId" type="hidden" value="@TipoUser" />
+            </div>
         </div>
     </form>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
