--- a/SGE/Views/ReservasSala/Reservas.cshtml
+++ b/SGE/Views/ReservasSala/Reservas.cshtml
@@ -11,7 +11,7 @@
 <div>
     <div class="d-flex row justify-content-between my-5">
         <div style="width: 15%;">
-            <img style="max-width:200px"/>
+            <img src="/img/imgIndexSalas.png" style="max-width:200px;" />
         </div>
         <div style="width: 85%;" class="ps-5">
             <div class="d-flex row align-items-center justify-content-between">
