--- a/SGE/Views/AlunosTurma/ListaAlunos.cshtml
+++ b/SGE/Views/AlunosTurma/ListaAlunos.cshtml
@@ -9,11 +9,45 @@
 
 
 <div class="container">
-    <p>
-        <a asp-controller="Turmas" asp-action="Create">Criar TUr </a>
-    </p>
 
-    <h1 class="text-center">Matrículas por Turma</h1>
+    <div class="d-flex row justify-content-between my-5">
+        <div style="width: 15%;">
+            <img src="https://placehold.co/200x150" />
+        </div>
+        <div style="width: 85%;" class="ps-5">
+            <div class="d-flex row align-items-center justify-content-between">
+                <h1 style="width:22%; font-size:3.2rem; color:#F6D524;">Turmas</h1>
+                <div style="height:5px; width:78%; background:#F6D524;" />
+            </div>
+            <p style="font-size:1.5rem; color:#fff;">Gerencie as turmas da sua instituição.</p>
+        </div>
+    </div>
+    <div class="tableAlunosTop">
+        <h3>Todas as Turmas</h3>
+        <div style="display:flex; align-items:center; justify-content:center; gap:3em;">
+            <a asp-controller="Turmas" asp-action="Create">
+                <svg width="35" height="35" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_166_1154)">
+                        <path d="M39.375 2.8125C40.1209 2.8125 40.8363 3.10882 41.3637 3.63626C41.8912 4.16371 42.1875 4.87908 42.1875 5.625V39.375C42.1875 40.1209 41.8912 40.8363 41.3637 41.3637C40.8363 41.8912 40.1209 42.1875 39.375 42.1875H5.625C4.87908 42.1875 4.16371 41.8912 3.63626 41.3637C3.10882 40.8363 2.8125 40.1209 2.8125 39.375V5.625C2.8125 4.87908 3.10882 4.16371 3.63626 3.63626C4.16371 3.10882 4.87908 2.8125 5.625 2.8125H39.375ZM5.625 0C4.13316 0 2.70242 0.592632 1.64752 1.64752C0.592632 2.70242 0 4.13316 0 5.625L0 39.375C0 40.8668 0.592632 42.2976 1.64752 43.3525C2.70242 44.4074 4.13316 45 5.625 45H39.375C40.8668 45 42.2976 44.4074 43.3525 43.3525C44.4074 42.2976 45 40.8668 45 39.375V5.625C45 4.13316 44.4074 2.70242 43.3525 1.64752C42.2976 0.592632 40.8668 0 39.375 0L5.625 0Z" fill="white" />
+                        <path d="M22.5 11.25C22.873 11.25 23.2306 11.3982 23.4944 11.6619C23.7581 11.9256 23.9062 12.2833 23.9062 12.6562V21.0938H32.3438C32.7167 21.0938 33.0744 21.2419 33.3381 21.5056C33.6018 21.7694 33.75 22.127 33.75 22.5C33.75 22.873 33.6018 23.2306 33.3381 23.4944C33.0744 23.7581 32.7167 23.9062 32.3438 23.9062H23.9062V32.3438C23.9062 32.7167 23.7581 33.0744 23.4944 33.3381C23.2306 33.6018 22.873 33.75 22.5 33.75C22.127 33.75 21.7694 33.6018 21.5056 33.3381C21.2419 33.0744 21.0938 32.7167 21.0938 32.3438V23.9062H12.6562C12.2833 23.9062 11.9256 23.7581 11.6619 23.4944C11.3982 23.2306 11.25 22.873 11.25 22.5C11.25 22.127 11.3982 21.7694 11.6619 21.5056C11.9256 21.2419 12.2833 21.0938 12.6562 21.0938H21.0938V12.6562C21.0938 12.2833 21.2419 11.9256 21.5056 11.6619C21.7694 11.3982 22.127 11.25 22.5 11.25Z" fill="white" />
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_166_1154">
+                            <rect width="45" height="45" fill="white" />
+                        </clipPath>
+                    </defs>
+                </svg>
+            </a>
+            <h3>|</h3>
+            <form>
+                <input style="width:40em; height: 2.5em; background:none; border: 1px solid white; border-radius:15px; padding:0px 10px; color:white;"  type="text" class="form-control" name="filtro"
+                           placeholder="Pesquisar por Turma" aria-label="Pesquisar por Turma"
+                           aria-describedby="button-addon2" />
+            </form>
+            </div>
+    </div>
+
+                    
     @if (ViewData["Erro"] != null)
     {
         <div class="row">
@@ -31,7 +65,7 @@
                 <div class="input-group mb-1">
                     <input type="text" class="form-control" name="filtro"
                            placeholder="Pesquisar por Turma" aria-label="Pesquisar por Turma"
-                           aria-describedby="button-addon2">
+                           aria-describedby="button-addon2" style="background: rgba(255, 255, 255, 0.3);  border: 2px solid white">
                     <button class="btn btn-dark" type="submit" id="button-addon2">
                         <svg bootstrap-icon="Search" width="16" height="16" aria-label="Pesquisar"></svg>
                     </button>
@@ -40,39 +74,40 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 h-25 overflow-auto">
-            <table class="table table-sm">
+        <div class="col-12 overflow-auto">
+            <table class="table-borderless tabela1">
                 <thead>
-                    <tr>
-                        <th>
+                    <tr style="padding: 0.3em ">
+                        <th style="padding: 0.3em">
                             Nome da Turma
                         </th>
-                        <th>
+                        <th style="padding: 0.3em">
                             Turno
                         </th>
                         <th>
                             Série
-                        </th>
-                        <th class="text-end">
+                        </th style="padding: 0.3em">
+                        <th class="text-end"  style="padding: 0.3em">
                             Selecionar
                         </th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody  class="table-bordered">
                     @foreach (var item in listaTurmas)
                     {
-                        <tr>
-                            <td>
+                        <tr style="padding: 0.3em ">
+                            <td style="padding: 0.3em ">
                                 @item.TurmaNome
-                            </td>
-                            <td>
+                            </td >
+                            <td style="padding: 0.3em ">
                                 @item.Turno
                             </td>
-                            <td>
+                            <td style="padding: 0.3em ">
                                 @item.Serie
                             </td>
-                            <td class="text-end">
-                                <a asp-action="SelecionaTurma" asp-route-id="@item.TurmaId" class="btn btn-primary">Selecionar</a>
+                          
+                            <td style="padding: 0.3em " class="text-end">
+                                <a asp-action="SelecionaTurma" asp-route-id="@item.TurmaId" class="btn btn-outline-light" >Selecionar</a>
                             </td>
                         </tr>
                     }
@@ -82,37 +117,37 @@
     </div>
     <div class="row">
         <div class="col-5">
-            <h2>Alunos Disponíveis</h2>
-            <table class="table table-sm">
+            <h2 style="color:white">Alunos Disponíveis</h2>
+            <table class="table-borderless tabela1">
                 <thead>
-                    <tr>
-                        <th>
+                    <tr style="padding: 0.3em ">
+                        <th style="padding: 0.3em ">
                             RM
                         </th>
-                        <th>
+                        <th style="padding: 0.3em ">
                             Nome do Aluno
                         </th>
-                        <th>
+                        <th style="padding: 0.3em ">
                             Adicionar
                         </th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody  class="table-bordered">
 
                     @foreach (var item in listaAlunos)
                     {
-                        <tr>
-                            <td>
+                        <tr style="padding: 0.3em ">
+                            <td style="padding: 0.3em ">
                                 @item.Matricula
                             </td>
-                            <td>
+                            <td style="padding: 0.3em ">
                                 @item.AlunoNome
                             </td>
-                            <td>
+                            <td style="padding: 0.3em ">
                                 <form id="AddAlunos" asp-action="AdicionaAlunoTurma">
                                     <input type="hidden" name="idAluno" value="@item.AlunoId" />
                                     <input type="hidden" name="idTurma" value="@ViewData["TurmaId"]" />
-                                    <input type="submit" name="btnAdd" value="+ Add" />
+                                    <input class="btn btn-outline-light" type="submit" name="btnAdd" value="+ Add" />
                                 </form>
                             </td>
                         </tr>
@@ -125,46 +160,46 @@
         <div class="col p-5 text-center">
         </div>
         <div class="col-5">
-            <h2>
+            <h2 style="color: white;">
                 Turma:
                 @if (ViewData["TurmaSelecionada"] != null)
                 {
                     <strong>@ViewData["TurmaSelecionada"]</strong>
                 }
             </h2>
-            <table class="table table-sm">
+            <table class="table-borderless tabela1">
                 <thead>
 
-                    <tr>
-                        <th>
+                    <tr style="padding: 0.3em ">
+                        <th style="padding: 0.3em ">
                             RM
                         </th>
-                        <th>
+                        <th style="padding: 0.3em ">
                             Nome do Aluno
                         </th>
-                        <th>
+                        <th style="padding: 0.3em ">
                             Remover
                         </th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody  class="table-bordered">
                     @if (alunosDaTurma != null)
                     {
 
                         @foreach (var item in alunosDaTurma)
                         {
-                            <tr>
-                                <td>
+                            <tr style="padding: 0.3em ">
+                                <td style="padding: 0.3em ">
                                     @item.Matricula
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em ">
                                     @item.AlunoNome
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em ">
                                     <form id="RemoveAlunos" asp-action="RemoveAlunoTurma">
                                         <input type="hidden" name="idAluno" value="@item.AlunoId" />
                                         <input type="hidden" name="idTurma" value="@ViewData["TurmaId"]" />
-                                        <input type="submit" name="btnRemove" value="Remover" />
+                                        <input class="btn btn-outline-light" type="submit" name="btnRemove" value="Remover" />
                                     </form>
                                 </td>
                             </tr>
