--- a/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
+++ b/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
@@ -34,9 +34,66 @@
     </div>
 </div>
 
-<p>
-    <a asp-controller="TiposOcorrencia" asp-action="Create">Tipos </a>
-</p>
+<div style="display:flex">
+    <h3 style="color:white; padding-right: 2em; ">Tipos de Ocorrência</h3>
+        <a asp-controller="TiposOcorrencia" asp-action="Create">
+            <svg width="35" height="35" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_166_1154)">
+                    <path d="M39.375 2.8125C40.1209 2.8125 40.8363 3.10882 41.3637 3.63626C41.8912 4.16371 42.1875 4.87908 42.1875 5.625V39.375C42.1875 40.1209 41.8912 40.8363 41.3637 41.3637C40.8363 41.8912 40.1209 42.1875 39.375 42.1875H5.625C4.87908 42.1875 4.16371 41.8912 3.63626 41.3637C3.10882 40.8363 2.8125 40.1209 2.8125 39.375V5.625C2.8125 4.87908 3.10882 4.16371 3.63626 3.63626C4.16371 3.10882 4.87908 2.8125 5.625 2.8125H39.375ZM5.625 0C4.13316 0 2.70242 0.592632 1.64752 1.64752C0.592632 2.70242 0 4.13316 0 5.625L0 39.375C0 40.8668 0.592632 42.2976 1.64752 43.3525C2.70242 44.4074 4.13316 45 5.625 45H39.375C40.8668 45 42.2976 44.4074 43.3525 43.3525C44.4074 42.2976 45 40.8668 45 39.375V5.625C45 4.13316 44.4074 2.70242 43.3525 1.64752C42.2976 0.592632 40.8668 0 39.375 0L5.625 0Z" fill="white" />
+                    <path d="M22.5 11.25C22.873 11.25 23.2306 11.3982 23.4944 11.6619C23.7581 11.9256 23.9062 12.2833 23.9062 12.6562V21.0938H32.3438C32.7167 21.0938 33.0744 21.2419 33.3381 21.5056C33.6018 21.7694 33.75 22.127 33.75 22.5C33.75 22.873 33.6018 23.2306 33.3381 23.4944C33.0744 23.7581 32.7167 23.9062 32.3438 23.9062H23.9062V32.3438C23.9062 32.7167 23.7581 33.0744 23.4944 33.3381C23.2306 33.6018 22.873 33.75 22.5 33.75C22.127 33.75 21.7694 33.6018 21.5056 33.3381C21.2419 33.0744 21.0938 32.7167 21.0938 32.3438V23.9062H12.6562C12.2833 23.9062 11.9256 23.7581 11.6619 23.4944C11.3982 23.2306 11.25 22.873 11.25 22.5C11.25 22.127 11.3982 21.7694 11.6619 21.5056C11.9256 21.2419 12.2833 21.0938 12.6562 21.0938H21.0938V12.6562C21.0938 12.2833 21.2419 11.9256 21.5056 11.6619C21.7694 11.3982 22.127 11.25 22.5 11.25Z" fill="white" />
+                </g>
+                <defs>
+                    <clipPath id="clip0_166_1154">
+                        <rect width="45" height="45" fill="white" />
+                    </clipPath>
+                </defs>
+            </svg>
+        </a>
+</div>
+
+<table class="table-borderless tabela1">
+    <thead>
+        <tr style="padding: 0.3em">
+            <th style="padding: 0.3em">
+                @Html.DisplayNameFor(model => model.TipoOcorrencia.TipoOcorrenciaNome)
+            </th>
+            <th style="padding: 0.3em">
+                @Html.DisplayNameFor(model => model.TipoOcorrencia.CadAtivo)
+            </th>
+            <th style="padding: 0.3em">
+                @Html.DisplayNameFor(model => model.TipoOcorrencia.CadInativo)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody class="table-bordered">
+        @foreach (var item in Model)
+        {
+            <tr style="padding: 0.3em">
+                <td style="padding: 0.3em">
+                    @Html.DisplayFor(modelItem => item.TipoOcorrencia.TipoOcorrenciaNome)
+                </td>
+                <td style="padding: 0.3em">
+                    @Html.DisplayFor(modelItem => item.TipoOcorrencia.CadAtivo)
+                </td>
+                <td style="padding: 0.3em">
+                    @Html.DisplayFor(modelItem => item.TipoOcorrencia.CadInativo)
+                </td>
+                <td style="padding: 0.3em">
+                    <a class="text-dark" asp-controller="TiposOcorrencia" asp-action="Edit" asp-route-id="@item.TipoOcorrenciaId"><svg bootstrap-icon="PencilSquare" width="19" height="19" aria-label=""></svg></a>
+                    <a class="text-dark" asp-controller="TiposOcorrencia" asp-action="Details" asp-route-id="@item.TipoOcorrenciaId"><svg bootstrap-icon="Info" width="19" height="19" aria-label=""></svg></a>
+                    <a class="text-dark" asp-controller="TiposOcorrencia" asp-action="Delete" asp-route-id="@item.TipoOcorrenciaId"><svg bootstrap-icon="Trash" width="19" height="19" aria-label=""></svg></a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<div style="display:flex">
+    <h3 style="color:white; padding-right: 2em; margin-top:2em">Ocorrências</h3>
+</div>
+
+
 <div class="container">
     @if (ViewData["Erro"] != null)
     {
@@ -49,12 +106,12 @@
             </div>
         </div>
     }
-    <form method="post" asp-action="BuscarAluno">
+    <form  method="post" asp-action="BuscarAluno">
         <div class="row mt-3">
             <div class="col-md-4">
                 <label for="tipoBusca" class="form-label">Buscar por:</label>
                 <div class="input-group">
-                    <select class="form-select" name="tipoBusca" id="tipoBusca">
+                    <select style="background: rgba(255, 255, 255, 0.3);  border: 2px solid white" class="form-select" name="tipoBusca" id="tipoBusca">
                         <option selected value="0">Nome</option>
                         <option value="1">E-mail</option>
                         <option value="2">Matrícula</option>
@@ -65,8 +122,8 @@
             <div class="col-md-8 text-end">
                 <label for="filtro" class="form-label text-start w-100">Digite o valor da busca</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" name="filtro" id="filtro" placeholder="Buscar por....">
-                    <button class="btn btn-dark" type="submit" id="btnBuscaAluno" asp-action="BuscarAluno">
+                    <input style="background: rgba(255, 255, 255, 0.3);  border: 2px solid white" type="text" class="form-control" name="filtro" id="filtro" placeholder="Buscar por....">
+                    <button class="btn btn-light" type="submit" id="btnBuscaAluno" asp-action="BuscarAluno">
                         <svg bootstrap-icon="Search" width="16" height="16" aria-label="Pesquisar"></svg>
                     </button>
                 </div>
@@ -77,43 +134,43 @@
     {
         <div class="row mt-3">
             <div class="col-12 h-25 overflow-auto">
-                <table class="table table-sm">
+                <table class="table-borderless tabela1">
                     <thead>
-                        <tr>
-                            <th>
+                        <tr style="padding: 0.3em">
+                            <th style="padding: 0.3em">
                                 Nome
                             </th>
-                            <th>
+                            <th style="padding: 0.3em">
                                 E-mail
                             </th>
-                            <th>
+                            <th style="padding: 0.3em">
                                 Matrícula
                             </th>
-                            <th>
+                            <th style="padding: 0.3em">
                                 Celular
                             </th>
-                            <th>
+                            <th style="padding: 0.3em">
                                 Ocorrências
                             </th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="table-bordered">
                         @foreach (var item in listaAlunos)
                         {
-                            <tr>
-                                <td>
+                            <tr style="padding: 0.3em">
+                                <td style="padding: 0.3em">
                                     @item.AlunoNome
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em">
                                     @item.Email
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em">
                                     @item.Matricula
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em">
                                     @item.Celular
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em">
                                     <a asp-action="OcorrenciasAluno" asp-route-id="@item.AlunoId" class="btn btn-primary">Selecionar</a>
                                 </td>
                             </tr>
@@ -138,22 +195,22 @@
         </div>
         <div class="row mt-3">
             <div class="col-12 h-50 overflow-auto">
-                <table class="table table-sm">
+                <table class="table-borderless tabela1">
                     <thead>
-                        <tr>
-                            <th>
+                        <tr style="padding: 0.3em">
+                            <th style="padding: 0.3em">
                                 Data
-                            </th>
-                            <th>
+                            </th >
+                            <th style="padding: 0.3em">
                                 Ocorrência
                             </th>
-                            <th>
+                            <th style="padding: 0.3em">
                                 Registrado por
                             </th>
-                            <th>
+                            <th style="padding: 0.3em">
                                 Finalizado
                             </th>
-                            <th>
+                            <th style="padding: 0.3em">
                                 Ações
                             </th>
                         </tr>
@@ -161,17 +218,17 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
+                            <tr style="padding: 0.3em">
+                                <td style="padding: 0.3em">
                                     @item.DataOcorrencia
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em">
                                     @item.Descricao
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em">
                                     @item.Usuario.UsuarioNome
                                 </td>
-                                <td>
+                                <td style="padding: 0.3em">
                                     @if (item.Finalizado == false)
                                     {
                                         if (item.CadAtivo == false)
