--- a/SGE/Views/Shared/_Layout.cshtml
+++ b/SGE/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                                 <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="Alunos" asp-action="Index">Alunos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="Turmas" asp-action="Index">Turmas</a>
+                                <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="AlunosTurma" asp-action="ListaALunos">Turmas</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="ReservasSala" asp-action="Reservas">Reservas de Sala</a>
