--- a/SGE/Views/TiposOcorrencia/Details.cshtml
+++ b/SGE/Views/TiposOcorrencia/Details.cshtml
@@ -32,5 +32,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.TipoOcorrenciaId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ListaOcorrencias" asp-controller="Ocorrencias">Back to List</a>
 </div>
