--- a/SGE/Views/Turmas/Create.cshtml
+++ b/SGE/Views/Turmas/Create.cshtml
@@ -60,7 +60,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ListaAlunos" asp-controller="AlunosTurma">Back to List</a>
 </div>
 
 @section Scripts {
