--- a/SGE/Views/Turmas/Delete.cshtml
+++ b/SGE/Views/Turmas/Delete.cshtml
@@ -64,6 +64,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="TurmaId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="ListaAlunos" asp-controller="AlunosTurma">Back to List</a>
     </form>
 </div>
