--- a/SGE/Views/Turmas/Details.cshtml
+++ b/SGE/Views/Turmas/Details.cshtml
@@ -62,5 +62,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.TurmaId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ListaAlunos" asp-controller="AlunosTurma">Back to List</a>
 </div>
